syntax = "proto3";

package dsime.transfer;

option go_package = "./pb";

message Credentials {
    string user_id = 1;
    bytes user_key = 2;
}